# QML_Duck_shooter_game

./: README.md
duck_game/: CMakeLists.txt  Instruction.qml  Main.qml  duckspawner.cpp  duckspawner.h  game.cpp  game.h  game.qml  game.qml.autosave  hunter.cpp  hunter.h  instruction.cpp  instruction.h  main.cpp
